--- a/F2018Travel/Views/Home/Index.cshtml
+++ b/F2018Travel/Views/Home/Index.cshtml
@@ -1,31 +1,30 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "COMP2084 Final";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Travel Bug</h1>
+    <p class="lead">Explore some of the globe's most memorable sites.</p>
+    <p>All continent from <a href="https://wikipedia.org">Wikipedia</a>.</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Asia</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Asia is Earth's largest and most populous continent, located primarily in the Eastern and Northern Hemispheres.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="Regions/Details/3">Destinations &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Europe</h2>
+        <p>Europe is a continent located entirely in the Northern Hemisphere and mostly in the Eastern Hemisphere.</p>
+        <p><a class="btn btn-default" href="Regions/Details/4">Destinations &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>The Americas</h2>
+        <p>The Americas comprise the totality of the continents of North and South America.
+        Together, they make up most of the land in Earth's western hemisphere and comprise the New World. </p>
+        <p><a class="btn btn-default" href="Regions/Details/5">Destinations &raquo;</a></p>
     </div>
 </div>
