--- a/F2018Travel/Views/Shared/_Layout.cshtml
+++ b/F2018Travel/Views/Shared/_Layout.cshtml
@@ -21,6 +21,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Regions", "Index", "Regions")</li>
+                        <li>@Html.ActionLink("Destinations", "Index", "Destinations")</li>
+                    }
+
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -30,7 +38,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - COMP2084 Final</p>
+            <p>&copy; @DateTime.Now.Year - COMP2084 Final - Nicholas Gardner - 200349007</p>
         </footer>
     </div>
 
